Chapter13/13.4-pod-with-host-pid-and-ipc.yaml
# By setting the hostIPC property to true, processes in the pod’s containers
# can also communicate with all the other processes running on the node,
# through Inter-Process Communication.
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-host-pid-and-ipc
spec:
  hostPID: true
  hostIPC: true
  containers:
  - name: main
    image: alpine
    command: ["/bin/sleep", "999999"]
