Chapter13/13.25-network-policy-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-net-policy
spec:
  podSelector:
    matchLabels: # This policy applies to pods with the app=webserver label.
      app: webserver
  egress: # Webserver pods may only connect to pods with the app=database label.
  - to:
    - podSelector:
        matchLabels:
          app: database
    ports:
    - port: 5432
